--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>ajajaj</h1>
+    <main>
+        <section id="login">
+            <div id="imagens">
+
+            </div>
+            <div id="login">
+                <h1>Login</h1>
+                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder 
+                    fazer o uso do site
+                </p>
+                <form action="login.php" method="post">
+                    
+                </form>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
