--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/medias.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
     <header><h1>Faça Aqui o seu Cadastro</h1></header>
@@ -20,7 +21,24 @@
                     fazer o uso do site
                 </p>
                 <form action="login.php" method="post">
-                    
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            email
+                            </span>
+                        <input type="email" name="Login" id="ilogin" placeholder="Seu email aqui " autocomplete="email">
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div class=" campo">
+                        <span class="material-symbols-outlined">
+                            lock
+                            </span>
+                        <input type="password" name="Senha" id="isenha" placeholder="Sua senha aqui " autocomplete="current-password">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <div class="botao">
+                        <input type="submit" value="Enviar">
+                    </div>
+                    <a href="../projetos-Pessoal/index.html">Esqueci a senha </a>
                 </form>
             </div>
         </section>
