--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="botao">
                         <input type="submit" value="Enviar">
                     </div>
-                    <a href="../projetos-Pessoal/index.html">Esqueci a senha </a>
+                    <a href="../projetos-Pessoal/index.html" target="_blank" >Esqueci a senha </a>
                 </form>
             </div>
         </section>
