--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/style.css" >
     <link rel="stylesheet" href="estilos/medias.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
@@ -20,7 +20,7 @@
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder 
                     fazer o uso do site
                 </p>
-                <form action="login.php" method="post">
+                <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
                         <span class="material-symbols-outlined">
                             email
@@ -34,14 +34,13 @@
                             </span>
                         <input type="password" name="Senha" id="isenha" placeholder="Sua senha aqui " autocomplete="current-password">
                         <label for="isenha">Senha</label>
-                    </div>
-                    <div class="botao">
-                        <input type="submit" value="Enviar">
-                    </div>
-                    <a href="../projetos-Pessoal/index.html" target="_blank" >Esqueci a senha </a>
+                    </div>            </div>
+                        <input id="f" type="submit" value="Enviar" >
+                    <a href="#" target="_blank" class="botao" >Esqueci a senha </a>
                 </form>
             </div>
         </section>
+        <a href="../projetos-Pessoal/index.html" id="secreto">Click aqui</a>
     </main>
 </body>
 </html>
