--- a/index.html
+++ b/index.html
@@ -20,26 +20,24 @@
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder 
                     fazer o uso do site
                 </p>
-                <form action="login.php" method="post" autocomplete="on">
+                <form action="../projetos-Pessoal/index.html" method="post" autocomplete="on" target="_blank">
                     <div class="campo">
                         <span class="material-symbols-outlined">
                             email
                             </span>
-                        <input type="email" name="Login" id="ilogin" placeholder="Seu email aqui " autocomplete="email">
+                        <input type="email" name="Login" id="ilogin" placeholder="Seu email aqui " autocomplete="email" required >
                         <label for="ilogin">Login</label>
                     </div>
                     <div class=" campo">
                         <span class="material-symbols-outlined">
                             lock
                             </span>
-                        <input type="password" name="Senha" id="isenha" placeholder="Sua senha aqui " autocomplete="current-password">
+                        <input type="password" name="Senha" id="isenha" placeholder="Sua senha aqui " autocomplete="current-password" required >
                         <label for="isenha">Senha</label>
-                    </div>            </div>
+                   </div>
                         <input id="f" type="submit" value="Enviar" >
                 </form>
-            </div>
         </section>
-        <a href="../projetos-Pessoal/index.html" id="secreto">Click aqui</a>
     </main>
 </body>
 </html>
