--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
-    <header><h1>Faça Aqui o seu Cadastro</h1></header>
+    <!--<header><h1>Faça Aqui o seu Cadastro</h1></header> -->
     <main>
         <section id="login">
             <div id="imagens">
