--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder 
                     fazer o uso do site
                 </p>
-                <form action="../projetos-Pessoal/index.html" method="post" autocomplete="on" target="_blank">
+                <form action="../projetos-Pessoal/404.html" method="post" autocomplete="on" target="_blank">
                     <div class="campo">
                         <span class="material-symbols-outlined">
                             email
